--- a/book/css/screen.css
+++ b/book/css/screen.css
@@ -217,7 +217,7 @@ h1 {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 3;
+  z-index: 1;
 }
 
 /* line 34, ../scss/_loader.scss */
@@ -239,31 +239,39 @@ h1 {
 
 /* line 48, ../scss/_loader.scss */
 #loader {
-  -webkit-animation: cup-drop 1.5s cubic-bezier(0.11, 1.06, 0.21, 0.99) 1.5s forwards;
-  -moz-animation: cup-drop 1.5s cubic-bezier(0.11, 1.06, 0.21, 0.99) 1.5s forwards;
-  -o-animation: cup-drop 1.5s cubic-bezier(0.11, 1.06, 0.21, 0.99) 1.5s forwards;
-  animation: cup-drop 1.5s cubic-bezier(0.11, 1.06, 0.21, 0.99) 1.5s forwards;
-  background: url('../img/teacup.svg?1378873015') 0 0 no-repeat;
-  -webkit-background-size: 100% 100%;
-  -moz-background-size: 100% 100%;
-  -o-background-size: 100% 100%;
-  background-size: 100% 100%;
-  width: 21.48438%;
-  padding-top: 15.91797%;
-  position: absolute;
-  top: -100%;
-  left: 50%;
-  margin-left: -9%;
-  z-index: 2;
   -webkit-transform: scale3d(1, 1, 1);
   -moz-transform: scale3d(1, 1, 1);
   -ms-transform: scale3d(1, 1, 1);
   -o-transform: scale3d(1, 1, 1);
   transform: scale3d(1, 1, 1);
+  -webkit-animation: cup-drop 1.5s cubic-bezier(0.11, 1.06, 0.21, 0.99) 1.5s forwards;
+  -moz-animation: cup-drop 1.5s cubic-bezier(0.11, 1.06, 0.21, 0.99) 1.5s forwards;
+  -o-animation: cup-drop 1.5s cubic-bezier(0.11, 1.06, 0.21, 0.99) 1.5s forwards;
+  animation: cup-drop 1.5s cubic-bezier(0.11, 1.06, 0.21, 0.99) 1.5s forwards;
+  width: 13.75em;
+  height: 10.1875em;
+  position: absolute;
+  top: -100%;
+  left: 50%;
+  margin-left: -6.875em;
+  margin-top: -5.09375em;
+  z-index: 2;
 }
 
-/* line 60, ../scss/_loader.scss */
-#loader p {
+/* line 59, ../scss/_loader.scss */
+.cup {
+  background: url('../img/teacup.svg?1378873015') 0 0 no-repeat;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
+  position: absolute;
+  margin-left: 1.5em;
+  width: 100%;
+  height: 100%;
+}
+/* line 65, ../scss/_loader.scss */
+.cup p {
   font-family: "blue-goblet-alt",fantasy;
   font-style: italic;
   font-weight: 400;
@@ -274,7 +282,7 @@ h1 {
   width: 60%;
 }
 
-/* line 70, ../scss/_loader.scss */
+/* line 76, ../scss/_loader.scss */
 .saucer {
   -webkit-animation: saucer-drop 3s cubic-bezier(0.11, 1.06, 0.87, 1.06) 2s forwards;
   -moz-animation: saucer-drop 3s cubic-bezier(0.11, 1.06, 0.87, 1.06) 2s forwards;
@@ -285,45 +293,44 @@ h1 {
   -moz-background-size: auto 100%;
   -o-background-size: auto 100%;
   background-size: auto 100%;
-  width: 25.39063%;
-  padding-top: 6.83594%;
+  width: 16.25em;
+  padding-top: 4.375em;
   position: absolute;
-  top: -100%;
+  top: -500%;
   left: 50%;
-  margin-left: -13.5%;
-  z-index: 1;
+  margin-left: -8.125em;
+  z-index: -1;
 }
 
-/* line 81, ../scss/_loader.scss */
+/* line 87, ../scss/_loader.scss */
 .loaded .saucer {
   -webkit-animation: saucer-done 1s 0.5s forwards;
   -moz-animation: saucer-done 1s 0.5s forwards;
   -o-animation: saucer-done 1s 0.5s forwards;
   animation: saucer-done 1s 0.5s forwards;
-  top: 62%;
+  top: 80%;
 }
 
-/* line 86, ../scss/_loader.scss */
+/* line 92, ../scss/_loader.scss */
 .loaded #loader {
   -webkit-animation: cup-done 1s cubic-bezier(1, 1.18, 0.3, -0.19) 1s forwards;
   -moz-animation: cup-done 1s cubic-bezier(1, 1.18, 0.3, -0.19) 1s forwards;
   -o-animation: cup-done 1s cubic-bezier(1, 1.18, 0.3, -0.19) 1s forwards;
   animation: cup-done 1s cubic-bezier(1, 1.18, 0.3, -0.19) 1s forwards;
-  top: 45%;
+  top: 60%;
 }
 
-/* line 91, ../scss/_loader.scss */
+/* line 97, ../scss/_loader.scss */
 #brew {
   -webkit-animation: pour-tea 5s 1 3s forwards;
   -moz-animation: pour-tea 5s 1 3s forwards;
   -o-animation: pour-tea 5s 1 3s forwards;
   animation: pour-tea 5s 1 3s forwards;
   position: absolute;
-  bottom: 78%;
-  left: 50%;
-  margin-left: -52%;
-  width: 80%;
-  height: 6.83594%;
+  bottom: 6.4em;
+  margin-left: -5.5em;
+  width: 8em;
+  height: 4.375em;
   -webkit-transform-origin: 50% 50%;
   -moz-transform-origin: 50% 50%;
   -ms-transform-origin: 50% 50%;
@@ -332,209 +339,209 @@ h1 {
 }
 
 @-moz-keyframes pour-tea {
-  /* line 101, ../scss/_loader.scss */
+  /* line 107, ../scss/_loader.scss */
   100% {
-    -moz-transform: scale(1.3, 1.75);
-    transform: scale(1.3, 1.75);
-    bottom: 83%;
+    -moz-transform: scale(1.2, 1.5);
+    transform: scale(1.2, 1.5);
+    bottom: 6.6em;
   }
 }
 
 @-webkit-keyframes pour-tea {
-  /* line 101, ../scss/_loader.scss */
+  /* line 107, ../scss/_loader.scss */
   100% {
-    -webkit-transform: scale(1.3, 1.75);
-    transform: scale(1.3, 1.75);
-    bottom: 83%;
+    -webkit-transform: scale(1.2, 1.5);
+    transform: scale(1.2, 1.5);
+    bottom: 6.6em;
   }
 }
 
 @-o-keyframes pour-tea {
-  /* line 101, ../scss/_loader.scss */
+  /* line 107, ../scss/_loader.scss */
   100% {
-    -o-transform: scale(1.3, 1.75);
-    transform: scale(1.3, 1.75);
-    bottom: 83%;
+    -o-transform: scale(1.2, 1.5);
+    transform: scale(1.2, 1.5);
+    bottom: 6.6em;
   }
 }
 
 @keyframes pour-tea {
-  /* line 101, ../scss/_loader.scss */
+  /* line 107, ../scss/_loader.scss */
   100% {
-    transform: scale(1.3, 1.75);
-    bottom: 83%;
+    transform: scale(1.2, 1.5);
+    bottom: 6.6em;
   }
 }
 
 @-moz-keyframes cup-drop {
-  /* line 108, ../scss/_loader.scss */
+  /* line 114, ../scss/_loader.scss */
   100% {
-    top: 45%;
+    top: 60%;
   }
 }
 
 @-webkit-keyframes cup-drop {
-  /* line 108, ../scss/_loader.scss */
+  /* line 114, ../scss/_loader.scss */
   100% {
-    top: 45%;
+    top: 60%;
   }
 }
 
 @-o-keyframes cup-drop {
-  /* line 108, ../scss/_loader.scss */
+  /* line 114, ../scss/_loader.scss */
   100% {
-    top: 45%;
+    top: 60%;
   }
 }
 
 @keyframes cup-drop {
-  /* line 108, ../scss/_loader.scss */
+  /* line 114, ../scss/_loader.scss */
   100% {
-    top: 45%;
+    top: 60%;
   }
 }
 
 @-moz-keyframes saucer-drop {
-  /* line 114, ../scss/_loader.scss */
+  /* line 120, ../scss/_loader.scss */
   100% {
-    top: 62%;
+    top: 80%;
     -moz-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
 
 @-webkit-keyframes saucer-drop {
-  /* line 114, ../scss/_loader.scss */
+  /* line 120, ../scss/_loader.scss */
   100% {
-    top: 62%;
+    top: 80%;
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
 
 @-o-keyframes saucer-drop {
-  /* line 114, ../scss/_loader.scss */
+  /* line 120, ../scss/_loader.scss */
   100% {
-    top: 62%;
+    top: 80%;
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
 
 @keyframes saucer-drop {
-  /* line 114, ../scss/_loader.scss */
+  /* line 120, ../scss/_loader.scss */
   100% {
-    top: 62%;
+    top: 80%;
     transform: rotate(360deg);
   }
 }
 
 @-moz-keyframes saucer-done {
-  /* line 121, ../scss/_loader.scss */
+  /* line 127, ../scss/_loader.scss */
   100% {
     top: 100%;
   }
 }
 
 @-webkit-keyframes saucer-done {
-  /* line 121, ../scss/_loader.scss */
+  /* line 127, ../scss/_loader.scss */
   100% {
     top: 100%;
   }
 }
 
 @-o-keyframes saucer-done {
-  /* line 121, ../scss/_loader.scss */
+  /* line 127, ../scss/_loader.scss */
   100% {
     top: 100%;
   }
 }
 
 @keyframes saucer-done {
-  /* line 121, ../scss/_loader.scss */
+  /* line 127, ../scss/_loader.scss */
   100% {
     top: 100%;
   }
 }
 
 @-moz-keyframes cup-done {
-  /* line 127, ../scss/_loader.scss */
+  /* line 133, ../scss/_loader.scss */
   15% {
     -moz-transform: rotate(7deg);
     transform: rotate(7deg);
   }
 
-  /* line 130, ../scss/_loader.scss */
+  /* line 136, ../scss/_loader.scss */
   65% {
     -moz-transform: rotate(-11deg);
     transform: rotate(-11deg);
   }
 
-  /* line 133, ../scss/_loader.scss */
+  /* line 139, ../scss/_loader.scss */
   100% {
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
-    top: 100%;
+    top: 150%;
   }
 }
 
 @-webkit-keyframes cup-done {
-  /* line 127, ../scss/_loader.scss */
+  /* line 133, ../scss/_loader.scss */
   15% {
     -webkit-transform: rotate(7deg);
     transform: rotate(7deg);
   }
 
-  /* line 130, ../scss/_loader.scss */
+  /* line 136, ../scss/_loader.scss */
   65% {
     -webkit-transform: rotate(-11deg);
     transform: rotate(-11deg);
   }
 
-  /* line 133, ../scss/_loader.scss */
+  /* line 139, ../scss/_loader.scss */
   100% {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
-    top: 100%;
+    top: 150%;
   }
 }
 
 @-o-keyframes cup-done {
-  /* line 127, ../scss/_loader.scss */
+  /* line 133, ../scss/_loader.scss */
   15% {
     -o-transform: rotate(7deg);
     transform: rotate(7deg);
   }
 
-  /* line 130, ../scss/_loader.scss */
+  /* line 136, ../scss/_loader.scss */
   65% {
     -o-transform: rotate(-11deg);
     transform: rotate(-11deg);
   }
 
-  /* line 133, ../scss/_loader.scss */
+  /* line 139, ../scss/_loader.scss */
   100% {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
-    top: 100%;
+    top: 150%;
   }
 }
 
 @keyframes cup-done {
-  /* line 127, ../scss/_loader.scss */
+  /* line 133, ../scss/_loader.scss */
   15% {
     transform: rotate(7deg);
   }
 
-  /* line 130, ../scss/_loader.scss */
+  /* line 136, ../scss/_loader.scss */
   65% {
     transform: rotate(-11deg);
   }
 
-  /* line 133, ../scss/_loader.scss */
+  /* line 139, ../scss/_loader.scss */
   100% {
     transform: rotate(0deg);
-    top: 100%;
+    top: 150%;
   }
 }
 
