--- a/book/scss/_variables.scss
+++ b/book/scss/_variables.scss
@@ -10,6 +10,9 @@ $min-height: 600;
 // Media Queries and size ratios
 $breakpoint-short: (min-aspect-ratio "4/3");
 
+// saucer ratios
+$saucer-sizer: 32em;
+
 // Colors
 
 $earth: #6c373f; //#a36f77;
