--- a/book/css/screen.css
+++ b/book/css/screen.css
@@ -328,6 +328,7 @@ h1 {
   animation: pour-tea 5s 1 3s forwards;
   position: absolute;
   bottom: 6.4em;
+  left: 50%;
   margin-left: -5.5em;
   width: 8em;
   height: 4.375em;
@@ -547,6 +548,11 @@ h1 {
 
 /* line 13, ../scss/scenes/_common.scss */
 .scene .page {
+  -webkit-transform: scale3d(1, 1, 1);
+  -moz-transform: scale3d(1, 1, 1);
+  -ms-transform: scale3d(1, 1, 1);
+  -o-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
   padding-top: 75%;
   position: relative;
   z-index: 0;
