--- a/book/css/screen.css
+++ b/book/css/screen.css
@@ -1015,66 +1015,86 @@ h1 {
   background-repeat: no-repeat;
 }
 
-/* line 4, ../scss/scenes/tunnels/_tunnels.scss */
-.scene-hole {
-  background: url('../img/bg-tunnel-border-left.svg?1378751783') 0 0 repeat-y, url('../img/bg-tunnel-border-right.svg?1378751720') 100% 0 repeat-y, url('../img/bg_tunnel-specks.png?1374696235') repeat, #6c373f;
-  -webkit-background-size: 4.88281% auto, 4.88281% auto, auto auto;
-  -moz-background-size: 4.88281% auto, 4.88281% auto, auto auto;
-  -o-background-size: 4.88281% auto, 4.88281% auto, auto auto;
-  background-size: 4.88281% auto, 4.88281% auto, auto auto;
+@media (min-aspect-ratio: 4 / 3) {
+  /* line 4, ../scss/scenes/tunnels/_tunnels.scss */
+  .scene-hole {
+    margin: 0 auto;
+    width: 133.3333vh;
+  }
 }
 
-/* line 16, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 11, ../scss/scenes/tunnels/_tunnels.scss */
 .scene .page_tunnels {
-  background: url('../img/tunnels.svg?1379668445') no-repeat;
-  -webkit-background-size: 100% auto;
-  -moz-background-size: 100% auto;
-  -o-background-size: 100% auto;
-  background-size: 100% auto;
+  background: url('../img/tunnels.svg?1379668445') no-repeat, url('../img/bg_tunnel-specks.png?1374696235') repeat, #6c373f;
+  -webkit-background-size: 100% auto, auto auto;
+  -moz-background-size: 100% auto, auto auto;
+  -o-background-size: 100% auto, auto auto;
+  background-size: 100% auto, auto auto;
   padding-top: 48.82813%;
 }
-
-/* line 24, ../scss/scenes/tunnels/_tunnels.scss */
-#tunnel {
-  position: relative;
-  background: url('../img/bg_tunnel-furniture.svg?1379267001') center 0 repeat-y;
-  -webkit-background-size: 87.89063% auto;
-  -moz-background-size: 87.89063% auto;
-  -o-background-size: 87.89063% auto;
-  background-size: 87.89063% auto;
+@media (min-aspect-ratio: 4 / 3) {
+  /* line 11, ../scss/scenes/tunnels/_tunnels.scss */
+  .scene .page_tunnels {
+    height: 65.104167vh;
+    padding: 0;
+  }
 }
 
+/* line 28, ../scss/scenes/tunnels/_tunnels.scss */
+#tunnel {
+  position: relative;
+  z-index: 0;
+}
 /* line 31, ../scss/scenes/tunnels/_tunnels.scss */
+#tunnel .page {
+  background: url('../img/bg-tunnel-border-left.svg?1378751783') 0 0 repeat-y, url('../img/bg-tunnel-border-right.svg?1378751720') 100% 0 repeat-y, url('../img/bg_tunnel-furniture.svg?1379267001') center 0 no-repeat, url('../img/bg_tunnel-specks.png?1374696235') repeat, #6c373f;
+  -webkit-background-size: 4.88281% auto, 4.88281% auto, 87.89063% auto, auto auto;
+  -moz-background-size: 4.88281% auto, 4.88281% auto, 87.89063% auto, auto auto;
+  -o-background-size: 4.88281% auto, 4.88281% auto, 87.89063% auto, auto auto;
+  background-size: 4.88281% auto, 4.88281% auto, 87.89063% auto, auto auto;
+  padding-top: 161%;
+}
+@media (min-aspect-ratio: 4 / 3) {
+  /* line 31, ../scss/scenes/tunnels/_tunnels.scss */
+  #tunnel .page {
+    height: 214.843707vh;
+    margin: 0 auto;
+    padding: 0;
+    width: 133.3333vh;
+  }
+}
+
+/* line 54, ../scss/scenes/tunnels/_tunnels.scss */
 .page_falling {
   z-index: -1;
 }
 
-/* line 33, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 56, ../scss/scenes/tunnels/_tunnels.scss */
 .curious .alice-falling {
   background-position: 0 16.66667%;
 }
 
-/* line 37, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 60, ../scss/scenes/tunnels/_tunnels.scss */
 .bored .alice-falling {
   background-position: 0 83.33333%;
 }
 
-/* line 41, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 64, ../scss/scenes/tunnels/_tunnels.scss */
 .sleeping .alice-falling {
   background-position: 0 66.66667%;
 }
 
-/* line 45, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 68, ../scss/scenes/tunnels/_tunnels.scss */
 .waking .alice-falling {
   background-position: 0 100%;
 }
 
-/* line 49, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 72, ../scss/scenes/tunnels/_tunnels.scss */
 .weird .alice-falling {
   background-position: 0 0;
 }
 
-/* line 53, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 76, ../scss/scenes/tunnels/_tunnels.scss */
 .jolted .alice-falling {
   background-position: 0 50%;
 }
@@ -1132,7 +1152,7 @@ h1 {
   }
 }
 
-/* line 62, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 85, ../scss/scenes/tunnels/_tunnels.scss */
 .alice-falling {
   background-position: 0 33.33333%;
   -webkit-background-size: 100% auto;
@@ -1146,9 +1166,19 @@ h1 {
   margin-left: -15.625%;
   position: absolute;
   top: 0;
+  z-index: 1;
+}
+@media (min-aspect-ratio: 4 / 3) {
+  /* line 85, ../scss/scenes/tunnels/_tunnels.scss */
+  .alice-falling {
+    padding: 0;
+    height: 60.484848vh;
+    width: 38.787879vh;
+    margin-left: -19.39394vh;
+  }
 }
 
-/* line 73, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 103, ../scss/scenes/tunnels/_tunnels.scss */
 .frightened .alice-falling {
   height: 998px;
   width: 640px;
@@ -1164,8 +1194,23 @@ h1 {
   padding-top: 48.73047%;
   height: 0;
 }
+@media (min-aspect-ratio: 4 / 3) {
+  /* line 103, ../scss/scenes/tunnels/_tunnels.scss */
+  .frightened .alice-falling {
+    padding: 0;
+    height: 60.484848vh;
+    width: 38.787879vh;
+    margin-left: -19.39394vh;
+  }
+}
 
-/* line 80, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 116, ../scss/scenes/tunnels/_tunnels.scss */
+.sticky-wrapper {
+  position: absolute;
+  width: 100%;
+}
+
+/* line 121, ../scss/scenes/tunnels/_tunnels.scss */
 .stuck.alice-falling {
   position: fixed;
   top: 0;
